<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hermite_path_planner_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hermite_path_planner</depend>
  <depend>hermite_path_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pure_pursuit_planner</depend>
  <depend>velocity_planner</depend>
  <depend>local_waypoint_server</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>quaternion_operation</depend>
  <depend>ament_cmake_auto</depend>
  <depend>color_names</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
