<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velocity_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>hermite_path_msgs</depend>
  <depend>hermite_path_planner</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>quaternion_operation</depend>
  <depend>eigen</depend>
  <depend>message_filters</depend>
  <depend>color_names</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
